# biddeford-eagles-league

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.cursor/rules/: django-python.mdc  project-stack.mdc
.github/workflows/: ci.yml
config/: settings.py  urls.py
docker/: entrypoint.py
league/: admin.py  admin_carryover.py  apps.py  constants.py  forms_admin.py  models.py  urls.py  views.py
league/migrations/: 0001_initial_domain.py
league/services/: round_robin_schedule.py  season_rosters_print.py  season_schedule_print.py  season_table_usage.py
league/testing/: __init__.py  sandbox.py
league/tests/: __init__.py  conftest.py  test_home.py  test_models_domain.py  test_round_robin_schedule.py  test_sandbox_helpers.py  test_season_rosters_print.py  test_season_schedule_print.py  test_season_table_usage.py
templates/: base.html
templates/admin/league/: season_change_form.html  season_generate_schedule.html  season_table_usage.html
templates/league/: _hello_fragment.html  home.html  season_rosters_print.html  season_schedule_print.html
